# DLO3DS

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: run_dlo3ds.launch
scripts/: dlo3ds_pipeline.py
scripts/ariadne_plus_class/: ariadne.py
scripts/ariadne_plus_class/core/: core.py
scripts/ariadne_plus_class/utils/: spline.py
scripts/dlo3ds_core/: camera_blender.py  estimate3D.py  filtering.py  optimization.py  reconstruction.py
scripts/fastdlo_core/: core.py  fastdlo.py
scripts/fastdlo_core/proc/: labelling.py  utils.py
scripts/fastdlo_core/seg_net/: predict.py
scripts/fastdlo_core/siam_net/: nn_predict.py
utilities/blender_rendering/: get_gt_blend.py  image.json  img_from_pose.py
utilities/blender_rendering/coco_data/: coco_annotations.json
utilities/blender_rendering/data_models/dlo_0/: dlo_0_r_20.blend  dlo_0_r_20.mtl  dlo_0_r_35.blend  dlo_0_r_35.mtl  dlo_0_r_50.blend  dlo_0_r_50.mtl
utilities/blender_rendering/data_models/dlo_1/: dlo_1_r_20.blend  dlo_1_r_20.mtl  dlo_1_r_35.blend  dlo_1_r_35.mtl  dlo_1_r_50.blend  dlo_1_r_50.mtl
utilities/blender_rendering/data_models/dlo_2/: dlo_2.txt  dlo_2_r_20.blend  dlo_2_r_20.mtl  dlo_2_r_35.blend  dlo_2_r_35.mtl  dlo_2_r_50.blend  dlo_2_r_50.mtl
utilities/blender_rendering/data_models/dlo_3/: dlo_3.txt  dlo_3_r_20.blend  dlo_3_r_20.mtl  dlo_3_r_35.blend  dlo_3_r_35.mtl  dlo_3_r_50.blend  dlo_3_r_50.mtl
utilities/blender_rendering/data_models/dlo_4/: dlo_4.txt  dlo_4_r_20.blend  dlo_4_r_20.mtl  dlo_4_r_35.blend  dlo_4_r_35.mtl  dlo_4_r_50.blend  dlo_4_r_50.mtl
(+37 files in other folders)
