<?xml version="1.0"?>
<package format="2">
  <name>dlo3ds</name>
  
  <version>0.0.0</version>
  
  <description>The DLO3DS-x package</description>
  
  <maintainer email="kevin@todo.todo">kevin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib </depend>
  <depend>actionlib_msgs</depend>

  <depend>xmlrpcpp</depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>sensor_msgs </depend>
  <build_depend> image_transport </build_depend>
  <depend> cv_bridge </depend>


</package>
